--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ ext {
     lifecycle_version = "1.1.1"
     koin_version = "0.9.3"
     mockito_version = "2.8.47"
+    mockito_android_version = "2.8.9"
+    kotlin_mockito = "1.5.0"
 }
