annotation to open kotlin classes for testing only in debug mode. classes will remain final in release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-allopen'
+
+allOpen {
+    // allows mocking for classes w/o directly opening them for release builds
+    annotation 'io.github.karadkar.popularmovies.testing.OpenForTesting'
+}
+
 
 android {
     compileSdkVersion 27
