--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ task clean(type: Delete) {
 
 ext {
     lifecycle_version = "1.1.1"
-    koin_version = "0.9.3"
+    koin_version = "1.0.0-beta-6"
     mockito_version = "2.8.47"
     mockito_android_version = "2.8.9"
     kotlin_mockito = "1.5.0"
