using kotlin dsl dependency management

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,26 +32,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation Libs.kotlinStdlib
+
+    implementation Libs.appCompat
+    implementation Libs.constraintLayout
+
+    testImplementation Libs.junit
+    androidTestImplementation Libs.atsRunner
+    androidTestImplementation Libs.atsRules
+    androidTestImplementation Libs.espresso
 
     // architecture component
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation Libs.archExtensions
 
     // koin
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
-    androidTestImplementation "org.koin:koin-test:$koin_version"
+    implementation Libs.koinAndroidViewModel
+    testImplementation Libs.koinTest
+    androidTestImplementation Libs.koinTest
 
     // mockito
-//    testImplementation "com.nhaarman:mockito-kotlin:$kotlin_mockito"
-//    androidTestImplementation "com.nhaarman:mockito-kotlin:$kotlin_mockito"
-//    androidTestImplementation "org.mockito:mockito-android:$mockito_android_version"
-    testImplementation 'org.mockito:mockito-core:2.18.3'
-    androidTestImplementation 'org.mockito:mockito-android:2.18.3'
+    testImplementation Libs.mockitoCore
+    androidTestImplementation Libs.mockitoAndroid
 }
