--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.60'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath Libs.gradlePlugin
+        classpath Libs.kotlinGradlePlugin
+        classpath Libs.kotlinAllOpen
     }
 }
 
@@ -28,9 +24,5 @@ task clean(type: Delete) {
 }
 
 ext {
-    lifecycle_version = "1.1.1"
-    koin_version = "1.0.0-beta-6"
-    mockito_version = "2.8.47"
-    mockito_android_version = "2.8.9"
-    kotlin_mockito = "1.5.0"
+    sampleVersion = ""
 }
