mock web server test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,6 @@ dependencies {
     implementation Libs.gson
     implementation Libs.gsonConverter
     implementation Libs.okhttpLogger
-    implementation Libs.mockWebServer
-    implementation Libs.robolectric
+    testImplementation Libs.mockWebServer
+    testImplementation Libs.robolectric
 }
