--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum "buildSrc/src/main/java/GradleDepenedencies.kt"}}
       - run:
           name: run unit test
-          command: ./gradlew test
+          command: ./gradlew testReleaseUnitTest --info
       - run:
           name: Build apk
           command: ./gradlew assembleRelease
