--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "io.github.karadkar.popularmovies.app.TestAppJUnitRunner"
     }
     buildTypes {
         release {
@@ -31,6 +31,10 @@ android {
 
     buildTypes.each {
         it.buildConfigField 'String', 'TMDB_API_KEY', tmdbApiKey
+    }
+
+    packagingOptions {
+        pickFirst 'mockito-extensions/org.mockito.plugins.MockMaker'
     }
 }
 
@@ -57,6 +61,7 @@ dependencies {
 
     // mockito
     testImplementation Libs.mockitoCore
+    androidTestImplementation Libs.mockitoAndroid
 
     // RxJava
     implementation Libs.rxJava
